--- a/PetStoreTemplate/app/build.gradle
+++ b/PetStoreTemplate/app/build.gradle
@@ -88,6 +88,7 @@ dependencies {
     // Accompanist
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.23.1"
     implementation "com.google.accompanist:accompanist-swiperefresh:0.23.1"
+    implementation "com.google.accompanist:accompanist-flowlayout:0.23.1"
 
     // Retrofit
     def retrofit_version = "2.9.0"
